--- a/CTS_Analytics/Web.config
+++ b/CTS_Analytics/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <connectionStrings>
      <add name="CentralDbConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
@@ -23,7 +24,7 @@
     <add key="CoalWarningPrioLimit" value="500" />
     <add key="CoalAlarmPrioLimit" value="750" />
 	<add key="DRip" value="192.168.0.68" />
-    <add key="SkipActPath" value="C:\SkipData"/>
+    <add key="SkipActPath" value="C:\SkipData" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -92,7 +93,6 @@
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="http://localhost:3000" />
         <add name="Access-Control-Allow-Credentials" value="true" />
         <add name="Access-Control-Allow-Headers" value="X-AspNet-Version,X-Powered-By,Date,Server,Accept,Accept-Encoding,Accept-Language,Cache-Control,Connection,Content-Length,Content-Type,Host,Origin,Pragma,Referer,User-Agent,Access-Control-Request-Headers,Access-Control-Request-Method" />
         <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, OPTIONS" />
@@ -133,4 +133,15 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <nlog>
+    <extensions>
+      <add assembly="Microsoft.ApplicationInsights.NLogTarget" />
+    </extensions>
+    <targets>
+      <target type="ApplicationInsightsTarget" name="aiTarget" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Trace" writeTo="aiTarget" />
+    </rules>
+  </nlog>
 </configuration>
