--- a/CTS_Analytics/packages.config
+++ b/CTS_Analytics/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.NLogTarget" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.8.1" targetFramework="net461" />
@@ -36,6 +37,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net461" developmentDependency="true" />
@@ -44,6 +46,10 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MiniProfiler" version="4.0.138" targetFramework="net461" />
+  <package id="MiniProfiler.EF6" version="4.0.138" targetFramework="net461" />
+  <package id="MiniProfiler.Mvc5" version="4.0.138" targetFramework="net461" />
+  <package id="MiniProfiler.Shared" version="4.0.138" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Moment.js" version="2.22.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
