--- a/CTS_Analytics/Web.Release.config
+++ b/CTS_Analytics/Web.Release.config
@@ -19,7 +19,7 @@
          connectionString="Data Source=10.21.199.28;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=Aaaa-1111" providerName="System.Data.SqlClient"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="CentralDbConnection"
-         connectionString="Data Source=10.21.199.28;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=Aaaa-1111" providerName="System.Data.SqlClient"
+         connectionString="Data Source=10.21.199.28;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=Aaaa-1111;Timeout=1000;" providerName="System.Data.SqlClient"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <!--<add name="DefaultConnection" connectionString="Server=192.168.0.67;Database=CoalTracking;Port=5432; User Id=postgres;Password=aaa-111;CommandTimeout=20;" providerName="Npgsql" />-->
     <add name="WagonDB" 
