--- a/CTS_Analytics/Web.Release.config
+++ b/CTS_Analytics/Web.Release.config
@@ -59,6 +59,8 @@
     </httpProtocol>
     <httpErrors>
       <error statusCode="404" prefixLanguageFilePath="" path="/ctsAnalytics/error" responseMode="ExecuteURL"  xdt:Transform="SetAttributes" xdt:Locator="Match(statusCode)"/>
+      <remove statusCode="401" subStatusCode="-1"  xdt:Transform="InsertIfMissing" xdt:Locator="Match(statusCode)"/>
+      <error statusCode="401" prefixLanguageFilePath="" path="/ctsAnalytics/error/UnAuth401" responseMode="ExecuteURL"  xdt:Transform="InsertIfMissing" xdt:Locator="Match(statusCode)"/>
     </httpErrors>
   </system.webServer>
 </configuration>
