--- a/CTS_Analytics/CTS_Analytics.csproj
+++ b/CTS_Analytics/CTS_Analytics.csproj
@@ -599,6 +599,7 @@
     <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -985,6 +986,7 @@
     <Content Include="Views\Mnemonic\home.cshtml" />
     <Content Include="Views\Mnemonic\tsof2-more.cshtml" />
     <Content Include="Views\Mnemonic\tsof2.cshtml" />
+    <Content Include="Views\DashBoard\_AlarmLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Grafana\" />
